testsuite/tests/polykinds/T7594.stderr

T7594.hs:37:12: error:
    • Couldn't match type ‘b0’ with ‘IO ()’
      Expected: a -> b0
        Actual: a -> IO ()
        ‘b0’ is untouchable
          inside the constraints: (:&:) c0 Real a
          bound by a type expected by the context:
                     forall a. (:&:) c0 Real a => a -> b0
          at T7594.hs:37:12-16
    • In the first argument of ‘app’, namely ‘print’
      In the expression: app print q2
      In an equation for ‘bar2’: bar2 = app print q2
    • Relevant bindings include bar2 :: b0 (bound at T7594.hs:37:1)
